--- a/requirements.txt
+++ b/requirements.txt
@@ -7,17 +7,19 @@ charset-normalizer==3.2.0
 comm==0.1.4
 debugpy==1.6.7.post1
 decorator==5.1.1
-Django==4.2.5
+Django==3.2.21
 djangorestframework==3.14.0
+entrypoints==0.4
 exceptiongroup==1.1.3
 executing==1.2.0
 gunicorn==21.2.0
 idna==3.4
-ipykernel==6.25.2
-ipython==8.15.0
+importlib-metadata==6.7.0
+ipykernel==6.16.2
+ipython==7.34.0
 jedi==0.19.0
-jupyter_client==8.3.1
-jupyter_core==5.3.1
+jupyter_client==7.4.9
+jupyter_core==4.12.0
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.7
 packaging==23.1
@@ -38,8 +40,9 @@ requests==2.31.0
 six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.2
-tornado==6.3.3
+tornado==6.2
 traitlets==5.9.0
 typing_extensions==4.7.1
 urllib3==2.0.4
 wcwidth==0.2.6
+zipp==3.15.0
