--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,10 @@ importlib-metadata==6.7.0
 ipykernel==6.16.2
 ipython==7.34.0
 jedi==0.19.0
+Jinja2==3.1.2
 jupyter_client==7.4.9
 jupyter_core==4.12.0
+MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.7
 packaging==23.1
@@ -35,7 +37,9 @@ pure-eval==0.2.2
 Pygments==2.16.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
+PyYAML==6.0.1
 pyzmq==25.1.1
+render==1.0.0
 requests==2.31.0
 six==1.16.0
 sqlparse==0.4.4
