forgot to add cors to pip install

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ comm==0.1.4
 debugpy==1.6.7.post1
 decorator==5.1.1
 Django==3.2.21
+django-cors-headers==4.1.0
 djangorestframework==3.14.0
 entrypoints==0.4
 exceptiongroup==1.1.3
