--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ debugpy==1.6.7.post1
 decorator==5.1.1
 Django==3.2.21
 django-cors-headers==4.1.0
+django-pdb==0.6.2
 djangorestframework==3.14.0
 entrypoints==0.4
 exceptiongroup==1.1.3
