--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.0",
+    "fast-levenshtein": "^3.0.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/fast-levenshtein": "^0.0.3",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.3"
   }
