--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+aiohttp==3.8.6
+aiosignal==1.3.1
 appnope==0.1.3
 asgiref==3.7.2
 asttokens==2.4.0
+async-timeout==4.0.3
+attrs==23.1.0
 backcall==0.2.0
 certifi==2023.7.22
 charset-normalizer==3.2.0
@@ -14,6 +18,7 @@ djangorestframework==3.14.0
 entrypoints==0.4
 exceptiongroup==1.1.3
 executing==1.2.0
+frozenlist==1.4.0
 gunicorn==21.2.0
 idna==3.4
 importlib-metadata==6.7.0
@@ -25,7 +30,9 @@ jupyter_client==7.4.9
 jupyter_core==4.12.0
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
+multidict==6.0.4
 nest-asyncio==1.5.7
+openai==0.28.1
 packaging==23.1
 parso==0.8.3
 pexpect==4.8.0
@@ -38,6 +45,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.16.1
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 pyzmq==25.1.1
@@ -46,8 +54,10 @@ six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.2
 tornado==6.2
+tqdm==4.66.1
 traitlets==5.9.0
 typing_extensions==4.7.1
 urllib3==2.0.4
 wcwidth==0.2.6
+yarl==1.9.2
 zipp==3.15.0
