--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "react-scripts": "^5.0.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,16 +39,16 @@
     ]
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.4.10",
-    "@types/fast-levenshtein": "^0.0.3",
-    "tailwindcss": "^3.3.3",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@flydotio/dockerfile": "^0.4.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/fast-levenshtein": "^0.0.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.48",
     "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7"
+    "@types/react-dom": "^18.2.7",
+    "tailwindcss": "^3.3.3"
   }
 }
