fixed dockerfile env variable for dev vs production solution

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -26,5 +26,7 @@ RUN set -ex && \
     rm -rf /root/.cache/
 COPY . /code
 
+ENV DJANGO_SETTINGS_MODULE backend.prd_settings
+
 EXPOSE 8000
 ENTRYPOINT litefs mount
