replacing backend database with supabase postgres (WIP)

--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,19 +1,19 @@
-# fly.toml app configuration file generated for anime-ranking-django on 2023-11-12T21:47:12-08:00
+# fly.toml app configuration file generated for anime-ranking-django-late-shadow-6464 on 2024-02-22T13:38:05-08:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "anime-ranking-django"
-primary_region = "sjc"
-console_command = "/code/manage.py shell"
+app = 'anime-ranking-django-late-shadow-6464'
+primary_region = 'sjc'
+console_command = '/code/manage.py shell'
 
 [build]
 
 [deploy]
-  release_command = ""
+  release_command = 'python manage.py migrate --noinput'
 
 [env]
-  PORT = "8000"
+  PORT = '8000'
 
 [http_service]
   internal_port = 8000
@@ -21,9 +21,13 @@ console_command = "/code/manage.py shell"
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
 
-[mounts]
-  source = "litefs"
-  destination = "/var/lib/litefs"
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
 
+[[statics]]
+  guest_path = '/code/static'
+  url_prefix = '/static/'
