--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,14 +1,14 @@
 {
   "builds": [
     {
-      "src": "backend/wsgi.py",
+      "src": "/backend/backend/wsgi.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "backend/wsgi.py"
+      "dest": "/backend/backend/wsgi.py"
     }
   ]
 }
