--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,6 +29,7 @@ jedi==0.19.0
 Jinja2==3.1.2
 jupyter_client==7.4.9
 jupyter_core==4.12.0
+Levenshtein==0.25.0
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
 multidict==6.0.4
@@ -47,9 +48,11 @@ pure-eval==0.2.2
 Pygments==2.16.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-Levenshtein==0.25.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 pyzmq==25.1.1
+rapidfuzz==3.6.1
 requests==2.31.0
 six==1.16.0
 sqlparse==0.4.4
