--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "fast-levenshtein": "^3.0.0",
     "postcss": "^8.4.32",
@@ -15,8 +14,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npx postcss ./src/index.css > ./public/output.css",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run predeploy && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -48,6 +48,8 @@
     "@types/node": "^16.18.48",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "tailwindcss": "^3.3.3"
+    "autoprefixer": "^10.4.18",
+    "postcss-cli": "^11.0.0",
+    "tailwindcss": "^3.4.1"
   }
 }
